trunk/Archive2/f2/b92fcbf5f54b3b/output
main.cpp: In function 'int main()':
main.cpp:34:56: error: 'eps' was not declared in this scope
         >> qi::eoi >> eps(phx::bind(is_valid, qi::_val))
                                                        ^
main.cpp:34:56: note: suggested alternatives:
In file included from /usr/local/include/boost/spirit/home/support/common_terminals.hpp:15:0,
                 from /usr/local/include/boost/spirit/home/qi/auto/auto.hpp:13,
                 from /usr/local/include/boost/spirit/home/qi/auto.hpp:15,
                 from /usr/local/include/boost/spirit/home/qi.hpp:15,
                 from /usr/local/include/boost/spirit/include/qi.hpp:16,
                 from main.cpp:2:
/usr/local/include/boost/spirit/home/support/common_terminals.hpp:89:5: note:   'boost::spirit::eps'
     BOOST_SPIRIT_DEFINE_TERMINALS_NAME_EX(
     ^
/usr/local/include/boost/spirit/home/support/common_terminals.hpp:89:5: note:   'boost::spirit::tag::eps'
     BOOST_SPIRIT_DEFINE_TERMINALS_NAME_EX(
     ^
/usr/local/include/boost/spirit/home/support/common_terminals.hpp:89:5: note:   'boost::spirit::eps'
     BOOST_SPIRIT_DEFINE_TERMINALS_NAME_EX(
     ^
